ch.3 - minor corrections

--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -101,14 +101,11 @@ Kromě standardní knihovny jazyka C\# Unity poskytuje \textbf{mnoho dalších k
 
 Samozřejmě zde najdeme mnoho nástrojů pro pokročilou \textbf{interakci s hierarchií herních objektů} - ničit objekty či vytvářet nové za běhu není problém. 
 
-Dále zde najdeme například široký výběr \textbf{matematických primitiv} - vektory a matice umožňující provádět základní operace známé z lineární algebry, typy reprezentující další geometrické objektů jako přímky či roviny, nebo třídu UnityEngine.Mathf (ekvivalent System.Math operující nad floaty místo doublů).
+Dále zde najdeme například široký výběr \textbf{matematických primitiv} - vektory (2D a 3D) a matice umožňující provádět základní operace známé z lineární algebry a mnoho typů reprezentujících další geometrické objekty jako přímky či roviny.
 
 Velkým tématem pro videohry je jak známo například \textbf{vykreslování grafiky} s pomocí GPU, \textbf{animace}, či \textbf{navigace herních postav terénem}. Pro každou z těchto oblastí a mnoho dalších disponuje Unity dedikovaným subsystémem. O šířce jeho záběru se lze přesvědčit v oficielní dokumentaci \cite{Unity}.
 
 \section{Fyzikální subsystém enginu Unity}
-
-\subsection{Představení}
-
 
 \begin{itemize}
     \item zjednodušená dynamika a kinematika pevného tělesa
