ch.4 minor correction

--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -175,4 +175,4 @@ Proto jsme systém zobecnili - místo jediné kulové plochy je možné jich def
 Dále jsme stanovili ovládání pro \textbf{pohyb hráčské postavy ve světě} - v této oblasti nám nic nebránilo použít klasické WASD, pouze jsme museli přidat klávesy QE pro rozhlížení, protože kurzor je již plně zaměstnán ovládáním meče.
 
 \bigbreak
-Nyní tedy máme vypracovaný návrh jak pro rozhraní, která popisují moduly naší práce, tak i pro rozhraní, skrze které budou tyto moduly komunikovat s uživatelem. Můžeme tedy přistoupit k implementaci.
+Nyní tedy máme vypracovaný návrh jak pro rozhraní popisující moduly naší práce, tak i pro rozhraní, skrze které budou tyto moduly komunikovat s uživatelem. Můžeme tedy přistoupit k implementaci.
