--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -107,6 +107,8 @@ Velkým tématem pro videohry je jak známo například \textbf{vykreslování g
 
 \section{Fyzikální subsystém enginu Unity}
 
+Jedním z těchto subsystémů, který budeme napříč naší prací extenzivně využívat, je ten pro fyzikální simulaci. 
+
 \begin{itemize}
     \item zjednodušená dynamika a kinematika pevného tělesa
     \item je to vlastní Uniťácké API postavené nad backendem nVidia PhysX, ale poskytuje jenom podmnožinu kompletní PhysX funkcionality
